@@ -67,6 +67,8 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libmfdata", "libmfdata\libm
 		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
 	EndProjectSection
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "smraw.net_dll", "smraw.net_dll\smraw.net_dll.vcproj", "{C9D11A1A-EF3A-4411-B8EA-1437B7511E5A}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Release|Win32 = Release|Win32
@@ -94,6 +96,8 @@ Global
 		{85005D62-6AA7-4D8A-86CB-4061B23D7C6C}.Release|Win32.Build.0 = Release|Win32
 		{616BDC90-6906-4D02-8D24-46AE4A97554D}.Release|Win32.ActiveCfg = Release|Win32
 		{616BDC90-6906-4D02-8D24-46AE4A97554D}.Release|Win32.Build.0 = Release|Win32
+		{C9D11A1A-EF3A-4411-B8EA-1437B7511E5A}.Release|Win32.ActiveCfg = Release|Win32
+		{C9D11A1A-EF3A-4411-B8EA-1437B7511E5A}.Release|Win32.Build.0 = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
