@@ -1,0 +1,10 @@
+EXTRA_DIST = \
+	smraw.net_handle.cpp smraw.net_handle.h \
+	smraw.net.cpp smraw.net.h
+
+MAINTAINERCLEANFILES = \
+	Makefile.in
+
+distclean: clean
+	/bin/rm -f Makefile
+
